test/sc++/error/forall-array-groups.scpp
../../scc/error/forall-array-groups.sc